--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <html>
 
 <head>
+    <title>About</title>
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+    <link href="css/bg.css" rel="stylesheet" type="text/css"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
 <body>
+
+
+    <div class="top-nav">
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./cv.html">CV</a></li>
+                <li><a href="./project.html">project</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
+
 HA! Working on my website, see ya soon!
+
+
+
+
 
 </body>
 
