--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>About</title>
-    
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,8 +25,14 @@
         </nav>
     </div>
 
+    <div class="container">
+        HA! Working on my website, see ya soon!
+    </div>
 
-HA! Working on my website, see ya soon!
+    <div class="container">
+        Here is my personal cv
+    </div>
+
 
 
 
