--- a/index.html
+++ b/index.html
@@ -5,34 +5,125 @@
 <head>
     <title>About</title>
 
+
+    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/text.css">
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
-<body>
+<body
 
 
-    <div class="top-nav">
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./cv.html">CV</a></li>
-                <li><a href="./project.html">project</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
+  <!-- Navigation Bar Starts Here -->
 
-    <div class="container">
-        HA! Working on my website, see ya soon!
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <div class="container">
-        Here is my personal cv
-    </div>
+      <!-- Brand TO BE DONE-->
+      <!-- make this a icon -->
+      <a class="navbar-brand" href="#">Hendrick Zhou</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Hendrick Zhou <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="https://github.com/SEU-SuperNova-CVRA/Robomaster2018-SEU-OpenSource/tree/master/Armor">Armor Detection</a>
+              <a class="dropdown-item" href="https://github.com/HendrickZhou/shazam-air">Shazam Air</a>
+              <a class="dropdown-item" href="./otherProject.html">Projects Just For Funny</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link" href="./resource/HangZhouCV.pdf">CV</a>
+          </li>
+            
+        </ul>
+      </div>
+    </nav>
+    <!-- Navigator Bar Ends Here-->
+
+
+
+    <!-- First Section Starts Here -->
+    <section id = "profile" style="padding-bottom: 80px;">
+      <div class="container">
+        <div class="row", style="padding-top:50px">
+
+          <div class="col-xs-12 col-md-4">
+            <div class="profile_avatar">
+              <img src="./resource/avatar.jpeg">
+            </div>
+            <div class="profile_content text_code">
+              <h3>Hang Zhou</h3>
+              <p>Hendrick Zhou</p>
+            </div>
+            <div class="profile_url text_code">
+              <a target="_blank">
+                <img src="./resource/GitHub-Mark-64px.png">
+              </a>
+              <a href="https://github.com/HendrickZhou" style="float: center;">Github Link</a>
+              </br>
+              <a target="_blank">
+                  <img src="./resource/email.png">
+              </a>
+              <a href="mailto:zhouhangseu@outlook.com" style="float: center;">Email Link</a>
+            </div>
+            <div class="border-bottom border-black", style="height:5px; width: 210px;"></div>
+          </div>
+
+          <div class="col-xs-12 col-md-8">
+            <h4 class="text_code">
+                This is Hang Zhou's space.
+            </h4>
+            <p class="text_code">
+                Stay hungry to various fields of EE&CS, Great enthusiasm in building things with my laptop. Experienced in hardware, software design, data science and computer vision.
+            </p>
+
+
+          </div>
+
+
+        </div>
+
+      </div>
+    </section>
+    <!-- First Section Ends Here -->
+
+
+    <!-- Experience Section Starts Here-->
+    <section class="bg-dark" id = "Experience">
+      <div class = "container" style="padding-top:20px">
+
+      </div>
+    </section>
+    <!-- Experience Ends Starts Here-->
+
+
+    <!-- Project Section Starts Here-->
+    <section id = "Project">
+      <div class="container">
+
+
+      </div>
+    </section>
+    <!-- Project Section Ends Here-->
+
+
+    <!-- Contact & Footer Section Starts Here-->
+
+    <!-- Contact & Footer Section Starts Here-->
 
 
 
@@ -40,6 +131,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+
 </body>
 
 
