--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
       <!-- Brand TO BE DONE-->
       <!-- make this a icon -->
-      <a class="navbar-brand" href="#">Hendrick Zhou</a>
+      <a class="navbar-brand" href="index.html">
+        <img style="max-width: 30px; max-height: 30px; border-radius: 50%" src="resource/brand.png">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
