--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <!-- Brand TO BE DONE-->
       <!-- make this a icon -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="./index.html">
         <img style="max-width: 30px; max-height: 30px; border-radius: 50%" src="resource/brand.png">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,17 +34,17 @@
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <!-- <li class="nav-item active">
             <a class="nav-link" href="#">Hendrick Zhou <span class="sr-only">(current)</span></a>
-          </li>
+          </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Projects
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="https://github.com/SEU-SuperNova-CVRA/Robomaster2018-SEU-OpenSource/tree/master/Armor">Armor Detection</a>
-              <a class="dropdown-item" href="https://github.com/HendrickZhou/shazam-air">Shazam Air</a>
-              <a class="dropdown-item" href="./otherProject.html">Projects Just For Funny</a>
+            <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" style="color:white;" href="https://github.com/SEU-SuperNova-CVRA/Robomaster2018-SEU-OpenSource/tree/master/Armor">Armor Detection</a>
+              <a class="dropdown-item" style="color:white;" href="https://github.com/HendrickZhou/shazam-air">Shazam Air</a>
+              <a class="dropdown-item" style="color:white;" href="./otherProject.html">Projects Just For Funny</a>
             </div>
           </li>
           <li class="nav-item dropdown">
