--- a/otherProject.html
+++ b/otherProject.html
@@ -19,16 +19,18 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <!-- Brand TO BE DONE-->
-        <!-- <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="./index.html">
+          <img style="max-width: 30px; max-height: 30px; border-radius: 50%" src="resource/brand.png">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button> -->
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="./index.html">Hendrick Zhou <span class="sr-only">(current)</span></a>
-            </li>
+            </li> -->
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Projects
