--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
           </li> -->
           <li class="nav-item dropdown">
-              <a class="nav-link" href="./resource/HangZhouCV.pdf">CV</a>
+              <a class="nav-link" href="./resource/HangZhouCV-v2.0.pdf">CV</a>
           </li>
 
             
