--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>About</title>
+    <title>HendrickZhou's website</title>
 
 
     <link rel="stylesheet" href="css/profile.css">
@@ -21,7 +21,7 @@
 
   <!-- Navigation Bar Starts Here -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="navbar fixed-top navbar-expand-lg navbar-white">
 
       <!-- Brand TO BE DONE-->
       <!-- make this a icon -->
@@ -65,16 +65,41 @@
             
         </ul>
       </div>
-    </nav>
+    </div>
     <!-- Navigator Bar Ends Here-->
 
 
 
+    <!-- Background Picture -->
+    <section id="cover" style="background: url(./resource/berkeley.jpeg); background-repeat:no-repeat; background-size:cover; background-position:center; background-attachment: fixed;">
+      <div class="container text-center" style="height:790px ;">
+        <!-- <img src="resource/berkeley.jpeg" class="img-fluid" alt="Responsive image"> -->
+        <div class="cover-text" style="width: 100%; max-width: 1000px; margin: auto; padding-top: 200px">
+          <h1>
+          There should be some motto
+          </h1>
+          <h1>
+            But I can't come up with one
+          </h1>
+          <h2>
+            Or can I?...
+          </h2>
+          <h1 style="color:honeydew">
+            May the force be with you
+          </h1>
+
+        </div>
+      </div>
+
+
+    </section>
+    <!-- Background Picture -->
+
+
     <!-- First Section Starts Here -->
-    <section id = "profile" style="padding-bottom: 80px;">
+    <section id = "profile", style="padding-bottom: 80px;">
       <div class="container">
         <div class="row", style="padding-top:50px">
-
           <div class="col-xs-12 col-md-4">
             <div class="profile_avatar">
               <img src="./resource/avatar.jpeg">
