--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         <!-- <img src="resource/berkeley.jpeg" class="img-fluid" alt="Responsive image"> -->
         <div class="cover-text" style="width: 100%; max-width: 1000px; margin: auto; padding-top: 200px">
           <h1>
-          There should be some motto
+          I don't know why the heck this page load this slow
           </h1>
           <h1>
-            But I can't come up with one
+            But since it's just a pure front end page
           </h1>
           <h2>
-            Or can I?...
+            I'm fine with it
           </h2>
           <h1 style="color:honeydew">
             <!-- May the force be with you -->
@@ -157,7 +157,7 @@
               <img class="card-img-top" src="./resource/pro_shazam2.png" alt="Card image" style="width:100%">
               <div class="card-body">
                 <h4 class="card-title">Shazam-air</h4>
-                <p class="card-text">Audio Processing & Music classifier Project writen for fun</p>
+                <p class="card-text">Audio Processing & Music classifier Project written for fun</p>
                 <a href="https://github.com/HendrickZhou/shazam-air" class="btn btn-primary">See Repository</a>
               </div>
             </div>
