--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <!-- <img src="resource/berkeley.jpeg" class="img-fluid" alt="Responsive image"> -->
         <div class="cover-text" style="width: 100%; max-width: 1000px; margin: auto; padding-top: 200px">
           <h1>
-          I don't know why the heck this page load this slow
+          I don't know why the hell this page loads like this slow
           </h1>
           <h1>
-            But since it's just a pure front end page
+            But since it's just a pure front end webpage
           </h1>
           <h2>
             I'm fine with it
